--- a/example/components/StripeElementsFormUI/CardFormUI/style.css
+++ b/example/components/StripeElementsFormUI/CardFormUI/style.css
@@ -1,4 +1,4 @@
-form {
+form.stripe {
   max-width: 800px;
   margin: 30px auto 100px;
   display: flex;
@@ -13,7 +13,7 @@ form {
   display: block;
 }
 
-form button {
+form.stripe button {
   white-space: nowrap;
   border: 0;
   outline: 0;
@@ -35,7 +35,7 @@ form button {
   margin-top: 10px;
 }
 
-form button:hover {
+form.stripe button:hover {
   color: #fff;
   cursor: pointer;
   background-color: #7795f8;
@@ -43,7 +43,7 @@ form button:hover {
   box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08);
 }
 
-form button[disabled] {
+form.stripe button[disabled] {
   opacity: 0.6;
 }
 
